# INSA_2023_classification-algorithm

./: CMakeLists.txt  Distance.txt  README.md  algorithm.cpp  algorithm.hpp  algorithm1.cpp  algorithm1.hpp  algorithm2.cpp  algorithm2.hpp  compareAlgo.cpp  compareAlgo.hpp  data.cpp  data.hpp  dataRead.txt  main.cpp  main.py  makefile  utils.cpp  utils.hpp
Tests_command/Read_Data/: Verified_Train_100%_Start.svm
binaries/: CMakeCache.txt
data/: data10Start.svm  data10end.svm  data2.svm  data20End.svm  data20Start.svm  data30Start.svm  data40End.svm  data40Start.svm  data50End.svm  data50Start.svm  data60End.svm  data60Start.svm  data70End.svm  data70Start.svm  data80End.svm  data80Start.svm  data90End.svm  dataTest.svm  dataTest2.svm  digits.svm  lismoi.txt  test.svm  test.txt  test2.txt  testReadData.txt  train.svm  train.txt
executable/: DataTrainingTest.txt
